src/assets/css/main.css
@import './color-scheme.css';
@import './base.css';
@import './helper.css';

/* ==========================================================================
    Author's custom styles
    ========================================================================== */

  @font-face {
    font-family: "Lato";
    src: local("Lato"), url("./../fonts/Lato/Lato-Black.ttf") format("truetype");
    font-display: swap;
  }

  *,
  *::before,
  *::after {
    box-sizing: border-box;
    margin: 0;
    position: relative;
    font-weight: normal;
  }

  body {
    min-height: 100vh;
    color: var(--color-text);
    background: var(--color-background);
    transition: color 0.5s, background-color 0.5s;
    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
      Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  .is-fullheight-100vh {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1;
  }

  a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, .navbar-link.is-active {
    background-color: transparent;
    color: var(--vt-c-black-soft);
  }

  h1, h2, .subtitle {
    font-family: 'Lato', sans-serif;
    color: var(--color-heading) !important;
  }

  footer {
    font-family: 'Lato', sans-serif;
    color: var(--vt-c-text-light-2) !important;
  }

